add swiper and styles

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "prismic-javascript": "^2.1.5",
     "prismic-vue": "^2.0.0",
     "sass-loader": "^8.0.2",
+    "swiper": "^5.3.6",
+    "vue-awesome-swiper": "^4.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
