--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass-loader": "^8.0.2",
     "swiper": "^5.3.6",
     "vue-awesome-swiper": "^4.1.0",
+    "vue-scrollto": "^2.18.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
