--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismic-vue": "^2.0.0",
     "sass-loader": "^8.0.2",
     "swiper": "^5.3.6",
+    "vee-validate": "^3.3.3",
     "vue-awesome-swiper": "^4.1.0",
     "vue-scrollto": "^2.18.1",
     "vuex": "^3.1.2"
